Removed 150th Anniversary banner and fixed alignment of top banner.

--- a/hugo/assets/css/cfc-2020/ws-topbar-sidenav.scss
+++ b/hugo/assets/css/cfc-2020/ws-topbar-sidenav.scss
@@ -6,7 +6,7 @@
   &.container {
     padding:0.5rem 0;
     //border-bottom:1px solid $cp-p500;
-    .fa-bars { font-size:180%; color:$cp-p500; margin-bottom:1rem; }
+    .fa-bars { font-size:150%; color:$cp-p500; margin-right:0.5rem; }
     nav a {
       color:$cp-p500;
       margin:0 1.2rem .5rem 0;
